wk_taa_taaqa/src/objects/NAICS_Code__c.object
<CustomObject>
    <description>Used to store all special codes for Marketing</description>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture, Forestry &amp; Fishing</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Transportation, Comms, Electric, Gas &amp; Sanitary</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Finance, Insurance &amp; Real Estate</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Public Administration</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA_Code__c</fullName>
        <label>MSA Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Name__c</fullName>
        <label>MSA Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Description__c</fullName>
        <label>SIC Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Number__c</fullName>
        <label>SIC Code Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Corporate</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Banks and Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Insurance Companies</fullName>
                </value>
                <value>
                    <fullName>Hospital and Payers</fullName>
                </value>
                <value>
                    <fullName>Consultants</fullName>
                </value>
                <value>
                    <fullName>Accounting Firms</fullName>
                </value>
                <value>
                    <fullName>State and Local Government</fullName>
                </value>
                <value>
                    <fullName>Financial and Estate Planners</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt and Membership Organizations</fullName>
                </value>
                <value>
                    <fullName>Legal Professionals</fullName>
                </value>
                <value>
                    <fullName>Schools and Libraries</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub-Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Admin of Economic Programs</fullName>
                </value>
                <value>
                    <fullName>Admin of Environment and Housing</fullName>
                </value>
                <value>
                    <fullName>Admin of HR Programs</fullName>
                </value>
                <value>
                    <fullName>Agricultural Production - Crops</fullName>
                </value>
                <value>
                    <fullName>Agricultural Production - Livestock</fullName>
                </value>
                <value>
                    <fullName>Agricultural Services</fullName>
                </value>
                <value>
                    <fullName>Air Transportation</fullName>
                </value>
                <value>
                    <fullName>Amusement and Recreation</fullName>
                </value>
                <value>
                    <fullName>Apparel and Accessory</fullName>
                </value>
                <value>
                    <fullName>Apparel Mfg</fullName>
                </value>
                <value>
                    <fullName>Automotive Dealers and Gas Station</fullName>
                </value>
                <value>
                    <fullName>Auto Repair and Parking</fullName>
                </value>
                <value>
                    <fullName>Building Construction</fullName>
                </value>
                <value>
                    <fullName>Building Materials, Hardware</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Chemical Mfg</fullName>
                </value>
                <value>
                    <fullName>Coal Mining</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction - Special Trade</fullName>
                </value>
                <value>
                    <fullName>Control Instruments</fullName>
                </value>
                <value>
                    <fullName>Depository Institutions</fullName>
                </value>
                <value>
                    <fullName>Eating and Drinking Places</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Electric, Gas, &amp; Sanitary</fullName>
                </value>
                <value>
                    <fullName>Electronic Equipment</fullName>
                </value>
                <value>
                    <fullName>Engineering, Accounting, Research</fullName>
                </value>
                <value>
                    <fullName>Executive, Legislative, &amp; General</fullName>
                </value>
                <value>
                    <fullName>Fabricated Metal Products</fullName>
                </value>
                <value>
                    <fullName>Fishing &amp; Hunting</fullName>
                </value>
                <value>
                    <fullName>Food Mfg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Marketing Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Segment__c</columns>
        <columns>NAME</columns>
        <columns>SIC_Code_Description__c</columns>
        <columns>SIC_Code_Number__c</columns>
        <columns>Industry__c</columns>
        <columns>Sub_Industry__c</columns>
        <columns>MSA_Code__c</columns>
        <columns>MSA_Name__c</columns>
        <columns>NAICS_Code__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MSA_Codes</fullName>
        <columns>NAME</columns>
        <columns>MSA_Code__c</columns>
        <columns>MSA_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MSA_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>MSA Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NAICS_Code</fullName>
        <columns>NAME</columns>
        <columns>Segment__c</columns>
        <columns>NAICS_Code__c</columns>
        <columns>SIC_Code_Description__c</columns>
        <columns>SIC_Code_Number__c</columns>
        <columns>Industry__c</columns>
        <columns>Sub_Industry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sub_Industry__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>NAICS Code</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NAICS Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>